manifests/quickpizza/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quickpizza
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "quickpizza.owl.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: quickpizza
          port: 3333
